add feature to save log to elasticsearch

--- a/first-pipeline.conf
+++ b/first-pipeline.conf
@@ -15,5 +15,8 @@ input {
 # }
 
 output {
-	stdout { codec => rubydebug }
+#	stdout { codec => rubydebug }
+	elasticsearch {
+                hosts => ["http://127.0.0.1:9200"]
+        }
 }
